# charls-image-test

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Directory.Build.props  LICENSE.md  README.md  charls_image_tester.cpp  charls_image_tester.sln  charls_image_tester.sln.DotSettings  charls_image_tester.vcxproj  charls_image_tester.vcxproj.filters  default.ruleset  default.ruleset.md  exclusion.dic  portable_anymap_file.h
src/: charls_image_tester.vcxproj  charls_image_tester.vcxproj.filters  main.cpp  pch.cpp  pch.h  portable_anymap_file.cpp  portable_anymap_file.h  portable_anymap_file.ixx
